# helloworld

./: .gitignore  cert.pem  key.pem  pyproject.toml  requirements.txt  run-readme  streamlit-example.py  streamlit_app.py  streamlit_login.py  streamlit_submit.py
.streamlit/: secrets.toml
bak/: app.py  streamlit_helloworld.py
menu/: streamlit_menu.py
menu/pages/: chatbot.py  langchain_chatbot.py
menu/utils/: chatclient.py  chatutils.py  keycloakutils.py  llmclient.py  menu.py
pages/: admin.py  main.py  super-admin.py  user.py
react/: 1_langchain-agent.py  2_langchain-react-agent.py  4_streamlit.py  6_streamlit-dynamodb.py  login.py  rag.py
utils/: menu.py
uv_streamlit/: readme
